[package]
name = "mure"
version = "0.2.4"
edition = "2021"
authors = ["Yui Kitsu <kitsuyui+github@kitsuyui.com>"]
description = "A command line tool for creating and managing multiple repositories."
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/kitsuyui/mure"
documentation = "https://docs.rs/mure"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
git2 = "0.18.1"
graphql_client = "0.13.0"
once_cell = "1.19.0"
regex = "1.10.3"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde = "1.0.196"
serde_derive = "1.0.196"
shellexpand = "3.1.0"
toml = "0.8.9"
openssl-probe = "0.1.5"
clap_complete = "4.4.9"
serde_json = "1.0.113"
codecov = "0.4.0"
codecov-cache = "0.2.0"
dirs = "5.0.1"

[dependencies.openssl]
version = "0.10.63"
features = ["vendored"]

[dev-dependencies]
mktemp = "0.5.1"
assay = "0.1.1"
assert_cmd = "2.0.13"
predicates = "3.1.0"
