[package]
name = "mure"
version = "0.2.5"
edition = "2024"
authors = ["Yui Kitsu <kitsuyui+github@kitsuyui.com>"]
description = "A command line tool for creating and managing multiple repositories."
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/kitsuyui/mure"
documentation = "https://docs.rs/mure"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
git2 = "0.20.0"
graphql_client = "0.15.0"
once_cell = "1.19.0"
regex = "1.10.4"
reqwest = { version = "0.13.0", features = ["blocking", "json"] }
serde = "1.0.200"
serde_derive = "1.0.200"
shellexpand = "3.1.0"
toml = "0.9.0"
openssl-probe = "0.1.5"
clap_complete = "4.5.2"
serde_json = "1.0.116"
dirs = "6.0.0"

[dependencies.openssl]
version = "0.10.64"
features = ["vendored"]

[dev-dependencies]
mktemp = "0.5.1"
assay = "0.1.1"
assert_cmd = "2.0.14"
predicates = "3.1.0"
